--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   width: 100vw;
 }
 #root {
-  background: darkslategray !important;
+  background: #2f4f4f !important;
   grid-template-columns: 20% 80%;
   grid-template-rows: auto -webkit-max-content;
   grid-template-rows: 3em auto -webkit-max-content;
@@ -18,6 +18,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 #nav-mobile > svg {
   cursor: pointer;
